===v4.5.2===
 * Added "%m" as a text substitution for the name of the unit that you are currently mousing over.
 * Existing substitutions "%t" and "%f" now work in all output locations.
 * The change made in 4.5.0 to reactve icons and conditions has been made optional. Those checking abilities such as raging blow or execute should probably enable this option.
 * New Condition:
 ** GCD active

===v4.5.1===
 * You can now shift-click links into the Announcement EditBox.
 * You can now shift-click links into the Choose Name/ID EditBox to insert a spellID/itemID.
 * Suggesting a spellID is now about 75% more efficient.
 * New text output locations:
 ** Smart Channel
 ** Chat Frame
 * Bug Fixes:
 ** (r178) The "Ignore Runes" setting should no longer appear for item cooldown icons
 ** (r179) Meta icons should now inherit icon properties from other icons a little better.
 ** (r181) Attempted a possible fix to the error 132s that some people are getting when they close the icon editor after viewing the group settings tab.
 ** (r182) ICD icons should now properly use the failed duration alpha setting when the duration requirements fail.
 ** (r183) Fixed texture alignment in the spell breakdown tooltip that appears when hovering over the choose name/ID editbox with a modifier key pressed.

===v4.5.0===
 * Fully integrated main addon settings/group settings into the icon editor.
 * You can now set custom text to be displayed where a keybinding would normally be displayed in order to remind you of your keybindings directly on TMW icons.
 * Moving/resizing a group that is anchored to a frame other than UIParent will adjust the offsets instead of resetting the anchor to UIParent.
 * Reactive icons and conditions should now more accurately reflect the state of the abilities that they are checking.
 * Greatly increased the versatility and customizability of condition icons.
 * Improved rune cooldown detection.
 * Version warnings should be slightly less annoying.