@@ -2,8 +2,10 @@
  * Added "%m" as a text substitution for the name of the unit that you are currently mousing over.
  * Existing substitutions "%t" and "%f" now work in all output locations.
  * The change made in 4.5.0 to reactve icons and conditions has been made optional. Those checking abilities such as raging blow or execute should probably enable this option.
- * New Condition:
+ * New Conditions:
  ** GCD active
+ ** Unit Threat - Scaled
+ ** Unit Threat - Raw
 
 ===v4.5.1===
  * You can now shift-click links into the Announcement EditBox.
